# gen_ai

./: README.md  pyproject.toml
app/: __init__.py  api.py  cli.py  core.py  indexing.py  rag.py  vectorstore.py
